--- a/bin/.project
+++ b/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GABOZAGO_local</name>
+	<name>GABOZAGO_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
